[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/Control.gd" type="Script" id=1]
[ext_resource path="res://Assets/background.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/MotionPicture_PersonalUseOnly.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
use_filter = true
extra_spacing_char = 6
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.5, 300.5 )
rotation = 3.14092
scale = Vector2( 1.28125, 1.12383 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -48.5
margin_right = 352.0
margin_bottom = 48.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_project1" type="Button" parent="CenterContainer"]
margin_right = 165.0
margin_bottom = 97.0
grow_vertical = 2
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Manipulasi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="CenterContainer"]
margin_left = 169.0
margin_right = 173.0
margin_bottom = 97.0
size_flags_vertical = 7
custom_styles/separator = SubResource( 1 )

[node name="btn_project2" type="Button" parent="CenterContainer"]
margin_left = 177.0
margin_right = 343.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Bentuk Dasar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator2" type="VSeparator" parent="CenterContainer"]
margin_left = 347.0
margin_right = 351.0
margin_bottom = 97.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="btn_project3" type="Button" parent="CenterContainer"]
margin_left = 355.0
margin_right = 526.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Karya Lingkaran"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="CenterContainer"]
margin_left = 530.0
margin_right = 534.0
margin_bottom = 97.0
size_flags_vertical = 3
custom_styles/separator = SubResource( 1 )

[node name="btn_project4" type="Button" parent="CenterContainer"]
margin_left = 538.0
margin_right = 704.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Karya Ellips"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_main" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.837
anchor_right = 0.5
anchor_bottom = 0.837
margin_left = -91.0
margin_top = -32.2
margin_right = 91.0
margin_bottom = 32.8
custom_fonts/font = SubResource( 2 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/btn_project1" to="." method="_on_btn_project1_pressed"]
[connection signal="pressed" from="CenterContainer/btn_project2" to="." method="_on_btn_project2_pressed"]
[connection signal="pressed" from="CenterContainer/btn_project3" to="." method="_on_btn_project3_pressed"]
[connection signal="pressed" from="CenterContainer/btn_project4" to="." method="_on_btn_project4_pressed"]
[connection signal="pressed" from="btn_main" to="." method="_on_btn_main_pressed"]
