[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/MotionPicture_PersonalUseOnly.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/bg-project.png" type="Texture" id=2]
[ext_resource path="res://Script/Control.gd" type="Script" id=3]
[ext_resource path="res://Scene/pro3.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1013.0
margin_bottom = 598.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 511.5, 303.5 )
rotation = 3.14092
scale = Vector2( 2.06623, 1.71544 )
texture = ExtResource( 2 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]

[node name="btn_prev_3" type="Button" parent="."]
margin_left = 79.0
margin_top = 504.0
margin_right = 249.0
margin_bottom = 561.0
rect_pivot_offset = Vector2( -427, 160 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "PREV "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="Button" parent="."]
margin_left = 388.0
margin_top = 468.0
margin_right = 636.0
margin_bottom = 551.0
rect_pivot_offset = Vector2( -476, 67 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btn_prev_3" to="." method="_on_btn_prev_3_pressed"]
[connection signal="pressed" from="btn_back" to="." method="_on_btn_back_pressed"]
